--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.1/css/bulma.min.css" integrity="sha256-n+Ch7oRdzZ9+8/inp+1mK/0Bt4T/2PSmo4L6YGoDiVM=" crossorigin="anonymous">
   </head>
   <body>
-    <main>
+    <main class="container">
       <nav class="nav">
         <div class="nav-left"><a class="nav-item">Friday Gang</a></div>
         <div class="nav-right"><div class="nav-item"><a class="button is-primary" onclick="reset()">Reset</a></div></div>
