--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       <div class="container">
         <nav class="nav">
           <div class="nav-left"><a class="nav-item">Friday Gang</a></div>
-          <div class="nav-right"><div class="nav-item"><a class="button is-primary" onclick="reset()">Reset</a></div></div>
+          <div class="nav-right"><div class="nav-item"><a class="button is-primary" onclick="reset()">Reset</a></div><div class="nav-item"><a class="button is-primary" onclick="calculate()">Calculate</a></div></div>
         </nav>
       </div>
-      <div class="card">
+      <div class="card" style="margin-top: 30px">
         <header class="card-header"><p class="card-header-title">Game Scores</p></header>
         <div class="card-content">
           <table class="table">
