--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <tbody>
               <tr>
                 <td>
-                  <select>
+                  <select tabindex="1">
                     <option value="" selected disabled>Player...</option>
                     <option>Anne</option>
                     <option>Jenner</option>
@@ -57,7 +57,7 @@
               </tr>
               <tr>
                 <td>
-                  <select>
+                  <select tabindex="2">
                     <option value="" selected disabled>Player...</option>
                     <option>Anne</option>
                     <option>Jenner</option>
@@ -81,7 +81,7 @@
               </tr>
               <tr>
                 <td>
-                  <select>
+                  <select tabindex="3">
                     <option value="" selected disabled>Player...</option>
                     <option>Anne</option>
                     <option>Jenner</option>
@@ -105,7 +105,7 @@
               </tr>
               <tr>
                 <td>
-                  <select>
+                  <select tabindex="4">
                     <option value="" selected disabled>Player...</option>
                     <option>Anne</option>
                     <option>Jenner</option>
@@ -129,7 +129,7 @@
               </tr>
               <tr>
                 <td>
-                  <select>
+                  <select tabindex="5">
                     <option value="" selected disabled>Player...</option>
                     <option>Anne</option>
                     <option>Jenner</option>
@@ -153,7 +153,7 @@
               </tr>
               <tr>
                 <td>
-                  <select>
+                  <select tabindex="6">
                     <option value="" selected disabled>Player...</option>
                     <option>Anne</option>
                     <option>Jenner</option>
@@ -177,7 +177,7 @@
               </tr>
               <tr>
                 <td>
-                  <select>
+                  <select tabindex="7">
                     <option value="" selected disabled>Player...</option>
                     <option>Anne</option>
                     <option>Jenner</option>
@@ -201,7 +201,7 @@
               </tr>
               <tr>
                 <td>
-                  <select>
+                  <select tabindex="8">
                     <option value="" selected disabled>Player...</option>
                     <option>Anne</option>
                     <option>Jenner</option>
@@ -222,6 +222,16 @@
                 <td><input type="number" id="player8leg5"></td>
                 <td><input type="number" id="player8leg6"></td>
                 <td><input type="number" id="player8total"></td>
+              </tr>
+              <tr>
+                <td>
+                <td><input type="number" id="leg1total"></td>
+                <td><input type="number" id="leg2total"></td>
+                <td><input type="number" id="leg3total"></td>
+                <td><input type="number" id="leg4total"></td>
+                <td><input type="number" id="leg5total"></td>
+                <td><input type="number" id="leg6total"></td>
+                <td><input type="number" id="total"></td>
               </tr>
             </tbody>
           </table>
